...
                android:layout_marginBottom="1dp"
                android:text="@{mapModel.unmetRequirement}"
                android:visibility="@{mapModel.hasUnmetRequirement}"
                tools:visibility="gone"/>

            <TextView
                android:id="@+id/error_panel"
                style="@style/RATextView.Inactive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:text="@string/connection_problems"
                android:visibility="@{!mapModel.hasServerConnection}"
...
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/rate_driver_divider_height"
                        android:layout_below="@+id/destination_address"
                        android:background="@color/divider" />

                    <EditText
                        android:id="@+id/comment"
                        style="@style/RATextView.MontserratLight"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/autocomplete_height"
                        android:layout_below="@id/comments_divider"
                        android:layout_centerHorizontal="true"
                        android:background="@android:color/white"
                        android:clickable="true"
                        android:drawablePadding="@dimen/material_padding"
                        android:gravity="left|center_vertical"
                        android:hint="@string/comment_hint"
                        android:imeOptions="actionDone"
                        android:maxLength="200"
                        android:maxLines="1"
                        android:paddingBottom="4dp"
                        android:paddingLeft="@dimen/material_padding"
                        android:paddingRight="@dimen/material_padding"
...
            style="@style/LinearLayout.Vertical"
            android:layout_alignParentBottom="true"
            android:animateLayoutChanges="true"
            android:alpha="@{mapModel.controlsAlpha}" />

        <ImageView
            android:id="@+id/cancel_pending_request"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/material_padding"
            android:src="@drawable/icn_cancel"
...
