...
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="placeholder_rate">5</string>
    <string name="hint_leave_comment">Comments are anonymously shared with drivers</string>
    <string name="ride_summary_description">Thank you for the ride!</string>
    <string name="rate_unable_to_load_map">Unable to load ride map</string>
    <string name="btn_submit">Submit</string>
    <string name="text_cancel_ride_dialog">Do you really want to cancel this ride?</string>
    <string name="btn_sms">SMS</string>
    <string name="btn_call">CALL</string>
    <string name="mock">Mock</string>
    <string name="location_error">Can not get location. Please check settings and enable location.</string>
    <string name="unable_resolve_address">Unable to resolve this location,  please try again</string>

...
    <string name="placeholder_location">Work\n401 Congress Ave #2650</string>
    <string name="text_fares">Fares may vary due to traffic, weather and other factors. Estimate does not include discounts or promotions. Routes displayed are examples and may not reflect the route on which estimates are based</string>
    <string name="error_pickup_location">Pickup location cannot be blank</string>
    <string name="error_destination_location">Destination location cannot be blank</string>
    <string name="title_no_driver_available">No Driver Available</string>
    <string name="message_no_driver_available">We are sorry currently no driver is available at your location.</string>
    <string name="message_ride_cancelled_by_driver">Your ride is cancelled by the driver.</string>
    <string name="message_ride_cancelled_by_driver_with_fee">Your ride is cancelled by the driver. You have been charged a $%1$.2f cancellation fee.</string>
    <string name="message_ride_cancelled_by_admin">Your ride is cancelled by admin.</string>
    <string name="message_ride_cancelled_by_admin_with_fee">Your ride is cancelled by admin. You have been charged a $%1$.2f cancellation fee.</string>
    <string name="message_ride_cancelled_by_user">Your ride has been successfully cancelled</string>
    <string name="message_ride_cancelled_by_user_with_fee">Your ride has been successfully cancelled. You have been charged a $%1$.2f cancellation fee.</string>
    <string name="message_active_ride_cancel">The driver has started the trip. You cannot cancel after the trip has started.</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="scheme_sms">sms</string>
    <string name="scheme_html">text/html</string>
...

    <!--Notifications-->
    <string name="driver_cancelled_notification_msg">Your driver cancelled the ride</string>
    <string name="redispatch_failed_notification_msg">Your ride has been cancelled</string>
    <string name="driver_assigned_notification_msg">Your driver is on the way!</string>
    <string name="driver_assigned_eta_notification_msg">"Your driver is on the way! ETA %1$s"</string>
    <string name="driver_reached_notification_msg">Your driver arrived!</string>

    <string name="error_tip_cannot_be_empty">You forgot to enter tip!</string>
    <string name="error_tip_too_large">You cannot tip more than $1%.2f</string>
    <string name="error_tip_too_small">You cannot tip less than $1%.2f</string>
    <string name="error_tip_invalid">Invalid tip amount</string>

...
