...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:background="@color/black_10_opaq"
        tools:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/ride_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
...
